force-app/main/default/objects/Car__c/fields/Fabrication_Date__c.field-meta.xml
<CustomField>
    <fullName>Fabrication_Date__c</fullName>
    <label>Fabrication Date</label>
    <type>Date</type>
</CustomField>