force-app/main/default/objects/Car__c/fields/YearOfManufacture__c.field-meta.xml
<CustomField>
    <fullName>YearOfManufacture__c</fullName>
    <label>Year Of Manufacture</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>