force-app/main/default/objects/Car__c/validationRules/Manufacture_Date_Not_Later_than_Current.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacture_Date_Not_Later_than_Current</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Fabrication_Date__c &lt;= TODAY())</errorConditionFormula>
    <errorDisplayField>Fabrication_Date__c</errorDisplayField>
    <errorMessage>The manufacturing date cannot be later than the current date</errorMessage>
</ValidationRule>